# cs2pattern

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
cs2pattern/: __init__.py  check.py  icons.json  modular.py  pattern.json
hooks/: update-date.py
tests/: __init__.py  test_pattern.py
tools/: README.md  add_pattern.py
