[tool.poetry]
name = "cs2pattern"
version = "0.9.1"
description = "CS2 pattern utility"
authors = ["Lukas Mahler <m@hler.eu>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Helyux/cs2pattern"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
vermin = "*"
pre-commit = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
